# Agenda-Com-Django

./: .env.exemplo  .gitignore  pyproject.toml  requirenments.txt
.github/workflows/: ci.yml  manual_deploy.yml
accounts/: models.py  urls.py  views.py
accounts/templates/accounts/: dashboard.html  login.html  logout.html  register.html
agenda/: settings.py  urls.py
contatos/: admin.py  models.py  urls.py  views.py
contatos/migrations/: 0001_initial.py  0002_contato_mostrar.py  0003_contato_foto.py
contatos/templates/contatos/: busca.html  detalhes.html  index.html
templates/: base.html
templates/admin/: base_site.html
templates/parciais/: _alert.html  _head.html  _nav.html
templates/static/css/: admin.css
tests/: test_de_coleta.py
