[tool.poetry]
name = "Agenda-Com-Django"
version = "0.1.0"
description = "Um projeto simples para gerenciar contatos com Django"
authors = ["Thi <tiagoqueirozgoncalves100@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.6"
Django = "^4.1"
Pillow = "^9.2.0"
django-simple-captcha = "^0.5.17"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
